fix image align center

--- a/src/styles/components/_image-library.scss
+++ b/src/styles/components/_image-library.scss
@@ -66,14 +66,16 @@
     left: 0;
     bottom: 0;
     right: 0;
+    text-align: center;
   }
 
-  .vertical-align{
+  .image-align-center{
     position: relative;
     top: 50%;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
+    left: 50%;
+    -webkit-transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
   }
 
   .images-container{
